изменил header добавил wrapper, изменил search

--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -3,6 +3,9 @@
     padding: 24px 50px;
     font-size: 0;
 }
+.header__wrapper {
+    max-width: 1240px;
+}
 
 .header__details {
     display: flex;
