--- a/frontend/src/components/Header/Search/Search.scss
+++ b/frontend/src/components/Header/Search/Search.scss
@@ -5,19 +5,22 @@
 
 .search__input {
     min-height: 50px;
-    padding-left: 23px;
+    padding: 0 23px;
     font-size: 20px;
-    color: $white-300;
+    color: $white-100;
     line-height: 20.9px;
     border: none;
     background: none;
     border-radius: 25px;
     background: $gray-100;
-    min-width: 420px;
+    min-width: 400px;
     transition: all 0.15s ease;
     outline: 1px solid transparent;
     &:focus {
         outline: 1px solid $white-300;
+    }
+    &::placeholder {
+        color: $white-300;
     }
 }
 
