--- a/frontend/src/views/Home/Hero/Hero.scss
+++ b/frontend/src/views/Home/Hero/Hero.scss
@@ -1,10 +1,12 @@
 @import '@/variables-dark.scss';
 .hero__wrapper {
     padding: 60px 50px;
-    max-width: 1240px;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.hero__head {
     display: flex;
     gap: 60px;
-    // margin: 0 auto;
 }
 .hero__tools {
     min-width: 228px;
@@ -152,4 +154,78 @@
     &--highlighted {
         color: $primary-color;
     }
+}
+
+.hero__cards {
+    margin-top: 64px;
+    display: grid;
+    grid-template-columns: 26fr 49fr 21fr 21fr 31fr;
+    grid-template-rows: 196px 202px;
+    list-style: none;
+    padding: 0;
+}
+
+.hero__card {
+    position: relative;
+    background-color: $gray-300;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    overflow: hidden;
+    
+    &--bigger {
+        grid-row: 1 / 3;
+        grid-column: 2 / 3;  
+    }
+    &--higher {
+        grid-row: 1 / 3;
+        grid-column: 5 / 6;  
+    }
+    z-index: -2;
+}
+.hero__ad {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    height: 100%;
+    width: fit-content;
+}
+.hero__lines {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
+.hero__photo {
+    width: 360px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+.hero__ad-line {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    &:nth-child(2) {
+        margin-left: 16px;
+    }
+}
+.hero__adtext {
+    padding: 0;
+    margin: 0;
+    width: 150px;
+    height: 38px;
+    border-radius: 100px;
+    border: 1px solid $white-100;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.hero__adplus {
+    width: 38px;
+    height: 38px;
 }
