--- a/frontend/src/views/Home/Hero/Hero.scss
+++ b/frontend/src/views/Home/Hero/Hero.scss
@@ -117,7 +117,7 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
     width: 100%;
 }
 
@@ -167,12 +167,18 @@
 
 .hero__card {
     position: relative;
-    background-color: $gray-300;
+    background-color: $gray-200;
     width: 100%;
     height: 100%;
     border-radius: 30px;
     overflow: hidden;
-    
+
+    &:nth-child(5) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $primary-color;
+    }
     &--bigger {
         grid-row: 1 / 3;
         grid-column: 2 / 3;  
@@ -228,4 +234,26 @@
 .hero__adplus {
     width: 38px;
     height: 38px;
+}
+
+.hero__cover {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.hero__about {
+    text-align: justify;
+    font-size: 18px;
+    line-height: 26px;
+    max-width: 224px;
+    margin: 38px auto 24px;
+    &--highlighted {
+        color: $primary-color;
+    }
+}
+
+.hero__games {
+    width: 390px;
+    margin-left: -10%;
 }
