--- a/frontend/src/views/Home/Hero/Hero.scss
+++ b/frontend/src/views/Home/Hero/Hero.scss
@@ -1,10 +1,6 @@
 @import '@/variables-dark.scss';
-.hero__wrapper {
-    padding: 60px 50px;
-    max-width: 1440px;
-    margin: 0 auto;
-}
 .hero__head {
+    position: relative;
     display: flex;
     gap: 60px;
 }
@@ -144,7 +140,7 @@
     position: absolute;
     display: flex;
     gap: 50px;
-    right: -100px;
+    right: 20px;
 }
 
 .hero__desc {
