--- a/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
+++ b/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
@@ -5,10 +5,11 @@
     border-radius: 25.73px;
     justify-content: center;
     align-items: center;
-    min-height: 50px;
+    height: 75%;
+    margin-right: 1.5rem;
     font-size: 20px;
     background: $gray-100;
-    padding: 0 0.6rem;
+    padding: 0.4rem 0.6rem;
     transition: all 0.15s ease;
 
     &__btn {
