добавлена карусель игр у выбранной секции без функционала

--- a/frontend/src/views/Home/Genre/Genre.scss
+++ b/frontend/src/views/Home/Genre/Genre.scss
@@ -31,3 +31,10 @@
     font-size: 26px;
     font-weight: 400;
 }
+
+.genre__body {
+    display: flex;
+    justify-content: space-between;
+    gap: 140px;
+    margin-top: 40px;
+}
