--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -3,3 +3,14 @@
     color: $white-100;
     font-size: 2em;
 }
+.screen {
+    transform: translateX(0px);
+    transition: all 1.3s ease;
+    border: 1px solid transparent;
+    &--left {
+        border-radius: 12px;
+        border: 1px solid $gray-300;
+        margin: 40px;
+        transform: translateX(calc(min(33.3%, 500px) * -1));
+    }
+}
