--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -23,6 +23,7 @@
 .header__item {
     display: flex;
     align-items: center;
+    gap: 20px;
 }
 
 .header__link {
@@ -37,10 +38,6 @@
 .profile__link {
     color: white;
     text-decoration: none;
-
-    &:not(:first-of-type) {
-        margin-left: .5rem;
-    }
 }
 
 
@@ -48,27 +45,38 @@
     display: flex;
 }
 
+.header__auth {
+    display: flex;
+    gap: 10px;
+}
+
 .profile__login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
     font-weight: 100;
-    border-radius: 25.73px;
+    border-radius: 26px;
     background-color: $gray-100;
-    padding: .6rem 1.2rem;
-    transition: .2s;
+    transition: all 0.15s ease;
+    height: 50px;
+    padding: 0 22px;
     &:hover {
-        background-color: $white-300;
+        opacity: 0.85;
     }
 }
 
 .profile__register {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
-    font-weight: 100;
-    margin-right: .5rem;
-    border-radius: 25.73px;
+    border-radius: 26px;
     background-color: $accent-color;
-    padding: .6rem 1.2rem;
-    transition: .2s;
+    padding: 0 30px;
+    height: 50px;
+    transition: all 0.15s ease;
     &:hover {
-        opacity: .5
+        opacity: 0.85;
     }
 }
