--- a/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
+++ b/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
@@ -2,35 +2,41 @@
 
 .theme-switcher {
     display: flex;
-    border-radius: 25.73px;
+    border-radius: 28px;
     justify-content: center;
     align-items: center;
-    height: 75%;
-    margin-right: 1.5rem;
+    gap: 6px;
+    height: 50px;
     font-size: 20px;
     background: $gray-100;
-    padding: 0.4rem 0.6rem;
+    padding: 0 6px;
     transition: all 0.15s ease;
 
     &__btn {
-        font-weight: 500;
-        background-color: $gray-200;
-        border: none;
-        border-radius: 19.65px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         cursor: pointer;
+        font-weight: 400;
+        background-color: $gray-200;
+        font-size: 20px;
+        border: none;
+        border-radius: 20px;
         color: white;
         transition: .2s;
-        padding: 0.4rem 1rem;
-    
+        height: 38px;
+        padding: 0 18px;
+        transition: all 0.15s ease;
         &:hover {
-            background-color: $white-300;
-        }
-        &:not(:first-of-type) {
-            margin-left: .35em;
+            background-color: $background-color;
         }
 
-        &:focus {
+        &--active {
             background-color: $primary-color;
+            &:hover {
+                cursor: default;
+                background-color: $primary-color;
+            }
         }
     }
 }
