--- a/frontend/src/components/MenuWindow/MenuWindow.scss
+++ b/frontend/src/components/MenuWindow/MenuWindow.scss
@@ -3,7 +3,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 36px;
     margin-right: 0;
     position: fixed;
     top: 0px;
@@ -14,6 +14,7 @@
     transition: all 1.2s ease;
     border-radius: 12px 0 0 12px;
     border: 1px solid transparent;  
+    overflow: hidden;
 }
   
   .menu-window--open {
@@ -24,7 +25,7 @@
   }
 
 .menu-window__title {
-    margin-top: 40%;
+    margin-top: 30%;
     padding-left: 60px;
     font-size: 16px;
     font-weight: 500;
@@ -93,4 +94,19 @@
     font-size: 14px;
     font-weight: 700;
     color: $white-200;
+}
+
+.menu-window__bg {
+    z-index: -1;
+    position: absolute;
+    user-drag: none;
+    bottom: -220px;
+    left: -180px;
+    transform: scale(0.67) rotate(10deg);
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
