--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -2,13 +2,14 @@
 .header {
     display: flex;
     justify-content: start;
-    padding: 24px 50px;
     font-size: 0;
+    margin: 0;
 }
 .header__wrapper {
     max-width: 1440px;
     margin: 0 auto;
     width: 1440px;
+    padding: 24px 50px;
 }
 
 .header__details {
@@ -60,6 +61,7 @@
     background-color: $gray-100;
     transition: all 0.15s ease;
     height: 50px;
+    margin: 0;
     padding: 0 22px;
     &:hover {
         opacity: 0.85;
@@ -75,6 +77,7 @@
     background-color: $accent-color;
     padding: 0 30px;
     height: 50px;
+    margin: 0;
     transition: all 0.15s ease;
     &:hover {
         opacity: 0.85;
