правка паддингов у номеров секций на главной странице, добавление миксина для адаптивного текста

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,4 +1,4 @@
-@import 'variables-dark';
+@import 'variables';
 @import "~normalize.css/normalize";
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap');
 
