--- a/frontend/src/views/Home/Hero/Hero.scss
+++ b/frontend/src/views/Home/Hero/Hero.scss
@@ -30,7 +30,7 @@
 .navigate__link {
     color: $white-200;
     text-decoration: none;
-    font-size: 20px;
+    @include adaptiv-font(20, 14);
     line-height: 1;
     &--active {
         color: $white-100;
@@ -63,13 +63,12 @@
 .last-update__title {
     color: $white-100;
     font-weight: 400;
-    font-size: 22px;
-    
+    @include adaptiv-font(22, 16);
 }
 
 .last-update__desc {
     color: $white-200;
-    font-size: 16px;
+    @include adaptiv-font(15, 12);
     margin: 8px 0 0;
 }
 
@@ -81,7 +80,7 @@
 
 .last-update__open {
     color: $white-100;
-    font-size: 20px;
+    @include adaptiv-font(20, 16);
     transition: all 0.15s ease;
     margin: 0;
     padding: 0;
@@ -117,7 +116,7 @@
 }
 
 .hero__title {
-    font-size: 92px;
+    @include adaptiv-font(92, 36);
     font-weight: 500;
     
     color: $white-100;
@@ -143,7 +142,7 @@
 
 .hero__desc {
     max-width: 385px;
-    font-size: 22px;
+    @include adaptiv-font(22, 16);
     line-height: 25px;
     &--highlighted {
         color: $primary-color;
@@ -220,7 +219,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    @include adaptiv-font(20, 14);
 }
 
 .hero__adplus {
@@ -236,7 +235,7 @@
 
 .hero__about {
     text-align: justify;
-    font-size: 18px;
+    @include adaptiv-font(18, 14);
     line-height: 26px;
     max-width: 224px;
     margin: 38px auto 24px;
