разграничил переменные для светлой и тёмной темы и заменил переменные в стилях

--- a/frontend/src/views/Home/Collection/Body/Body.scss
+++ b/frontend/src/views/Home/Collection/Body/Body.scss
@@ -1,7 +1,7 @@
 @import '@/variables.scss';
 .collection__body {
     margin-top: 6px;
-    background: $gray-200;
+    background: $background-detailed;
     padding: 40px;
     border-radius: 36px;
 }
@@ -27,7 +27,7 @@
 
 .collection__down-caption {
     display: flex;
-    align-self:flex-start;
+    align-self: flex-start;
     gap: 25px;
     margin-left: 72px;
 }
