--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -1,8 +1,9 @@
 @import '@/variables.scss';
 .app {
-    color: $white-100;
+    color: $text-primary;
     font-size: 2em;
     background-attachment: fixed;
+    transition: all .5s;
 }
 
 .jumbo {
@@ -70,7 +71,7 @@
     border: 1px solid transparent;
     &--left {
         border-radius: 12px;
-        border: 1px solid $gray-100;
+        border: 1px solid $background-secondary;
         margin: 40px;
         transform: translateX(calc(min(33.3%, 500px) * -1));
     }
