--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -28,7 +28,7 @@
 }
 
 .header__link {
-    color: $white-100;
+    color: $text-primary;
     text-decoration: none;
 }
 
@@ -58,7 +58,7 @@
     font-size: 20px;
     font-weight: 100;
     border-radius: 26px;
-    background-color: $gray-100;
+    background-color: $background-secondary;
     transition: all 0.15s ease;
     height: 50px;
     margin: 0;
