--- a/frontend/src/components/Header/Search/Search.scss
+++ b/frontend/src/components/Header/Search/Search.scss
@@ -8,20 +8,20 @@
     min-height: 50px;
     padding: 0 23px;
     font-size: 20px;
-    color: $white-100;
+    color: $text-primary;
     line-height: 20.9px;
     border: none;
     background: none;
     border-radius: 25px;
-    background: $gray-100;
+    background: $background-secondary;
     min-width: 400px;
     transition: all 0.15s ease;
     outline: 1px solid transparent;
     &:focus {
-        outline: 1px solid $white-300;
+        outline: 1px solid $text-secondary;
     }
     &::placeholder {
-        color: $white-300;
+        color: $text-secondary;
     }
 }
 
