--- a/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
+++ b/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
@@ -8,7 +8,7 @@
     gap: 6px;
     height: 50px;
     font-size: 20px;
-    background: $gray-100;
+    background: $background-secondary;
     padding: 0 6px;
     transition: all 0.15s ease;
 
@@ -18,11 +18,11 @@
         justify-content: center;
         cursor: pointer;
         font-weight: 400;
-        background-color: $gray-200;
+        background-color: $background-detailed;
         font-size: 20px;
         border: none;
         border-radius: 20px;
-        color: white;
+        color: $text-primary;
         transition: .2s;
         height: 38px;
         padding: 0 18px;
