--- a/frontend/src/components/MenuWindow/MenuWindow.scss
+++ b/frontend/src/components/MenuWindow/MenuWindow.scss
@@ -20,7 +20,7 @@
   .menu-window--open {
     right: 0;
     top: 40px;
-    border: 1px solid $gray-100;
+    border: 1px solid $background-secondary;
     // margin: 40px 12px;
   }
 
@@ -29,7 +29,7 @@
     padding-left: 60px;
     font-size: 16px;
     font-weight: 500;
-    color: $white-200;
+    color: $text-secondary;
     text-transform: uppercase;
 }
 
@@ -46,13 +46,13 @@
     font-weight: 500;
     font-size: 48px;
     text-decoration: none;
-    color: $white-200;
+    color: $text-secondary;
     display: flex;
     gap: 12px;
     align-items: flex-end;
     transition: all 0.5s ease;
     &--active {
-        color: $white-100;
+        color: $text-primary;
         padding-left: 20px;
     }
     &:hover {
@@ -63,7 +63,7 @@
 .menu-window__number{
     font-weight: 400;
     font-size: 14px;
-    border: 1px solid $white-200;
+    border: 1px solid $text-secondary;
     border-radius: 20px;
     width: fit-content;
     padding: 4px 8px;
@@ -92,7 +92,7 @@
     padding: 0 10px 10px 60px;
     font-size: 14px;
     font-weight: 700;
-    color: $white-200;
+    color: $text-secondary;
 }
 
 .menu-window__bg {
