--- a/frontend/src/views/Catalog/AdSlider/AdBand/AdBand.scss
+++ b/frontend/src/views/Catalog/AdSlider/AdBand/AdBand.scss
@@ -1,10 +1,10 @@
 @import '@/variables.scss';
 
 .ad-band {
-    background-color: $gray-200;
+    background-color: $background-detailed;
     display: flex;
     gap: 10px;
-    color: $white-100;
+    color: $text-primary;
     text-decoration: none;
     padding: 10px;
     max-width: 352px;
@@ -46,7 +46,7 @@
     text-overflow: ellipsis;
     max-height: 42px;
     line-height: 18px;
-    color: $white-200;
+    color: $text-detailed;
 }
 
 .ad-band__tags {
