--- a/frontend/src/views/Catalog/AdSlider/AdBanner/AdBanner.scss
+++ b/frontend/src/views/Catalog/AdSlider/AdBanner/AdBanner.scss
@@ -9,12 +9,12 @@
     width: 100%;
     height: 526px;
     background-size: cover;
-    color: $white-100;
+    color: $text-primary;
     box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.50);
 }
 
 .ad-banner__info { 
-    background-color: $gray-200;
+    background-color: $background-detailed;
     width: 480px;
     border-radius: 8px;
     margin: 20px;
@@ -30,7 +30,7 @@
 
 .ad-banner__desc {
     font-size: 20px;
-    color: $white-200;
+    color: $text-detailed;
     line-height: 28px;
     padding: 0;
     margin: 0 0 16px;
@@ -56,7 +56,7 @@
 }
 
 .ad-banner__more {
-    color: $white-100;
+    color: $text-primary;
     font-size: 24px;
     font-weight: 400;
     margin: 0;
@@ -75,7 +75,7 @@
         }
         & circle {
             transition: all 0.15s ease;
-            fill: $white-100;
+            fill: $text-primary;
         }
     }
 
@@ -84,12 +84,12 @@
             fill: $primary-color;
         }
         & circle {
-            fill: $white-100;
+            fill: $text-primary;
         }
         &:hover {
             & path {
                 transition: all 0.15s ease;
-                fill: $white-100;
+                fill: $text-primary;
             }
             & circle {
                 transition: all 0.15s ease;
