--- a/frontend/src/views/Home/Collection/Head/Head.scss
+++ b/frontend/src/views/Home/Collection/Head/Head.scss
@@ -2,7 +2,7 @@
 .collection__head {
     margin-top: 90px;
     display: flex;
-    background: $gray-200;
+    background: $background-detailed;
     padding: 32px;
     border-radius: 36px;
     justify-content: space-between;
@@ -16,7 +16,7 @@
     gap: 16px;
     background: none;
     border: none;
-    color: $white-100;
+    color: $text-primary;
     font-size: 16px;
     font-weight: 600;
 }
@@ -25,13 +25,13 @@
     padding: 17px 23px 18px;
     text-transform: uppercase;
     margin: 0;
-    border: 1px solid $white-100;
+    border: 1px solid $text-primary;
     border-radius: 100px;
     min-width: 160px;
     transition: all 0.15s ease;
     &:hover {
-        background-color: $white-100;
-        color: black;
+        background-color: $text-primary;
+        color: $background-color;
     }
 }
 
@@ -47,7 +47,7 @@
 }
 .collection__name {
     
-    color: $white-100;
+    color: $text-primary;
     font-size: 28px;
     font-weight: 600;
 }
@@ -63,12 +63,12 @@
     padding: 0;
     cursor: pointer;
     border-radius: 20px;
-    border: 1px solid $white-100;
+    border: 1px solid $text-primary;
         background: transparent;
     &--active {
         width: 12px;
         height: 12px;
         border: none;
-        background: $white-100;
+        background: $text-primary;
     }
 }
