--- a/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
+++ b/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
@@ -40,7 +40,7 @@
   justify-content: space-between;
   align-items: center;
   border-radius: 50px;
-  border: 2px solid $gray-100;
+  border: 2px solid $background-secondary;
   padding: 12px 20px;
   width: 148px;
 }
@@ -60,7 +60,7 @@
   &--circle {
     width: 12px;
     height: 12px;
-    background-color: $gray-100;
+    background-color: $background-secondary;
     border-radius: 12px;
     
   }
