--- a/frontend/src/views/Home/Genre/ListGenres/SwitcherGenres/SwitcherGenres.scss
+++ b/frontend/src/views/Home/Genre/ListGenres/SwitcherGenres/SwitcherGenres.scss
@@ -3,7 +3,7 @@
     cursor: pointer;
     border-radius: 33px;
     gap: 8px;
-    border: 1px solid $gray-100;
+    border: 1px solid $background-secondary;
     background: transparent;
     padding: 0 0 0 64px;
     display: flex;
@@ -12,11 +12,11 @@
     width: 356px;
     &--active {
         border: 1px solid transparent;
-        background: $gray-100;
+        background: $background-secondary;
     }
     &:hover {
         transition: all 0.2s ease;
-        border: 1px solid $white-300;
+        border: 1px solid $text-secondary;
     }
 }
 
@@ -24,7 +24,7 @@
     font-size: 26px;
     line-height: 1;
     font-weight: 500;
-    color: $white-100;
+    color: $text-primary;
     
     display: -webkit-box;
     -webkit-line-clamp: 1;
@@ -49,7 +49,7 @@
         }
         & circle {
             transition: all 0.2s ease;
-            fill: $white-100;
+            fill: $text-primary;
         }
     }
 }
