--- a/frontend/src/views/Catalog/Catalog.scss
+++ b/frontend/src/views/Catalog/Catalog.scss
@@ -1,6 +1,11 @@
 @import '@/variables-dark.scss';
+
+.catalog {
+    display: flex;
+    justify-content: space-between;
+}
 .catalog__wrapper {
     max-width: 1440px;
     margin: 0 auto;
-    padding: 60px 50px;
+    padding: 40px 50px;
 }
