--- a/frontend/src/views/Catalog/GamesList/GamesItem/GamesItem.scss
+++ b/frontend/src/views/Catalog/GamesList/GamesItem/GamesItem.scss
@@ -1,7 +1,7 @@
 @import '@/variables-dark.scss';
 
 .card__content {
-    display: inline-grid;
+    height: 13.8rem;
     flex-direction: column;
     padding: 1rem 1rem 2rem;
     border-radius: 15px;
@@ -27,8 +27,13 @@
 
 .card__desc {
     color: $white-300;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
     margin-top: .4rem;
     font-size: .84rem;
+    overflow: hidden;
     width: 9rem;
     line-height: 18px;
 }
