Начата работа над адаптивом + несколько фиксов

--- a/frontend/src/components/Header/Search/Search.scss
+++ b/frontend/src/components/Header/Search/Search.scss
@@ -31,3 +31,9 @@
     transform: translateY(-50%);
     right: 16px;
 }
+
+@media screen and (max-width: 768px) {
+    .search {
+        display: none;
+    }
+}
