--- a/frontend/src/components/MenuWindow/MenuWindow.scss
+++ b/frontend/src/components/MenuWindow/MenuWindow.scss
@@ -109,3 +109,11 @@
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+
+// @media screen and (max-width: 576px) {
+//     .menu-window {
+//         width: min(100%, 500px);
+//         right: calc(min(100%, 500px) * -1);
+       
+//     }
+// }
