--- a/frontend/src/views/Catalog/AsideSettings/AsideSettings.scss
+++ b/frontend/src/views/Catalog/AsideSettings/AsideSettings.scss
@@ -2,19 +2,14 @@
 .aside-settings {
     max-width: 170px;
     float: left;
-    margin-right: 20px;
-    margin-left: 3.2rem;
     margin-top: 2.5rem;
     padding-right: 25px;
+    padding-left: 1.8rem
 }
 .aside-settings__list {
     list-style: none;
     gap: 20px;
     margin-bottom: 50px;
-
-    &:last-child {
-        margin-bottom: 100%;
-    }
 }
 
 .aside-settings__title {
@@ -36,3 +31,14 @@
 .aside-settings__icon {
     margin-bottom: 6px;
 }
+
+@media screen and (width > 1200px) {
+    .aside-settings {
+        margin-left: auto;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+
+}
+
