--- a/frontend/src/views/Catalog/GamesList/GamesList.scss
+++ b/frontend/src/views/Catalog/GamesList/GamesList.scss
@@ -13,7 +13,8 @@
 }
 
 .list__body {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
     gap: 19px;
     flex-wrap: wrap;
     list-style: none;
@@ -33,5 +34,21 @@
 
     &:hover {
         color: $white-100;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .list__body {
+        grid-template-columns: 1fr 1fr;
+        gap: 15px;
+    }
+
+    .games__header {
+        font-size: 1.2rem;
+        width: 13rem;
+    }
+
+    .games__show {
+        font-size: 1rem;
     }
 }
