--- a/frontend/src/views/Catalog/AdSlider/AdBanner/AdBanner.scss
+++ b/frontend/src/views/Catalog/AdSlider/AdBanner/AdBanner.scss
@@ -5,9 +5,9 @@
     display: flex;
     align-items: flex-end;
     border-radius: 16px;
-    max-width: 936px;
+    max-width: 58.5rem;
     width: 100%;
-    height: 526px;
+    height: 32.875rem;
     background-size: cover;
     color: $white-100;
     box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.50);
@@ -15,7 +15,7 @@
 
 .ad-banner__info { 
     background-color: $gray-200;
-    width: 480px;
+    width: 30rem;
     border-radius: 8px;
     margin: 20px;
     padding: 20px;
@@ -23,7 +23,7 @@
 }
 
 .ad-banner__title {
-    font-size: 36px;
+    font-size: 2.4rem;
     padding: 0;
     margin: 0 0 16px;
 }
@@ -106,4 +106,42 @@
     object-fit: cover;
     height: 100%;
     width: 100%;
+}
+
+@media screen and (max-width: 576px) {
+    .ad-banner {
+        max-width: 26.5rem;
+        height: 17.6rem;
+    }
+
+    .ad-banner__info { 
+        width: 11rem;
+        height: 10rem;
+    }
+
+    .ad-banner__title {
+        font-size: 1.4rem;
+    }
+
+    .ad-banner__desc {
+        font-size: .6rem;
+        line-height: 12px;
+        margin-bottom: .6rem;
+    }
+
+    .ad-banner__tags {
+        font-size: .6rem;
+    }
+
+    .ad-banner__link {
+        margin-top: 0;
+    }
+
+    .ad-banner__more {
+        font-size: .8rem;
+    }
+
+    .ad-banner__arrow {
+        width: 20px;
+    }
 }
