--- a/frontend/src/views/Catalog/AsideSettings/AsideSettings.scss
+++ b/frontend/src/views/Catalog/AsideSettings/AsideSettings.scss
@@ -18,7 +18,7 @@
 
 .aside-settings__link{
     text-decoration: none;
-    color: $text-detailed;
+    color: var(--text-detailed);
     font-size: 20px;
     font-weight: 400;
     transition: all 0.15s ease;
