--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -28,7 +28,7 @@
 }
 
 .header__link {
-    color: $text-primary;
+    color: var(--text-primary);
     text-decoration: none;
 }
 
@@ -56,9 +56,10 @@
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    color: var(--text-primary);
     font-weight: 100;
     border-radius: 26px;
-    background-color: $background-secondary;
+    background-color: var(--background-secondary);
     transition: all 0.15s ease;
     height: 50px;
     margin: 0;
@@ -74,7 +75,7 @@
     justify-content: center;
     font-size: 20px;
     border-radius: 26px;
-    background-color: $accent-color;
+    background-color: var(--accent-color);
     padding: 0 30px;
     height: 50px;
     margin: 0;
