--- a/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
+++ b/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
@@ -8,9 +8,9 @@
     gap: 6px;
     height: 50px;
     font-size: 20px;
-    background: $background-secondary;
+    background: var(--background-secondary);
     padding: 0 6px;
-    transition: all 0.15s ease;
+    transition: all 0.15s linear;
 
     &__btn {
         display: flex;
@@ -18,24 +18,25 @@
         justify-content: center;
         cursor: pointer;
         font-weight: 400;
-        background-color: $background-detailed;
+        background-color: var(--background-extra);
         font-size: 20px;
         border: none;
         border-radius: 20px;
-        color: $text-primary;
+        color: var(--text-primary);
         transition: .2s;
         height: 38px;
         padding: 0 18px;
         transition: all 0.15s ease;
         &:hover {
-            background-color: $background-color;
+            background-color: var(--background-color);
         }
 
         &--active {
-            background-color: $primary-color;
+            background-color: var(--primary-color);
+            color: white;
             &:hover {
                 cursor: default;
-                background-color: $primary-color;
+                background-color: var(--primary-color);
             }
         }
     }
