--- a/frontend/src/components/MenuWindow/MenuWindow.scss
+++ b/frontend/src/components/MenuWindow/MenuWindow.scss
@@ -10,7 +10,7 @@
     right: calc(min(33.33%, 500px) * -1);
     width: min(33.33%, 500px);
     height: calc(100% - 80px);
-    background-color: $background-color;
+    background-color: var(--background-color);
     transition: all 1.2s ease;
     border-radius: 12px 0 0 12px;
     border: 1px solid transparent;  
@@ -20,7 +20,7 @@
   .menu-window--open {
     right: 0;
     top: 40px;
-    border: 1px solid $background-secondary;
+    border: 1px solid var(--background-secondary);
     // margin: 40px 12px;
   }
 
@@ -29,7 +29,7 @@
     padding-left: 60px;
     font-size: 16px;
     font-weight: 500;
-    color: $text-secondary;
+    color: var(--text-secondary);
     text-transform: uppercase;
 }
 
@@ -46,13 +46,13 @@
     font-weight: 500;
     font-size: 48px;
     text-decoration: none;
-    color: $text-secondary;
+    color: var(--text-secondary);
     display: flex;
     gap: 12px;
     align-items: flex-end;
     transition: all 0.5s ease;
     &--active {
-        color: $text-primary;
+        color: var(--text-primary);
         padding-left: 20px;
     }
     &:hover {
@@ -63,7 +63,7 @@
 .menu-window__number{
     font-weight: 400;
     font-size: 14px;
-    border: 1px solid $text-secondary;
+    border: 1px solid var(--text-secondary);
     border-radius: 20px;
     width: fit-content;
     padding: 4px 8px;
@@ -84,6 +84,15 @@
     &:hover {
         opacity: 0.85;
     }
+
+    &_icon {
+        circle {
+            fill: var(--background-secondary)
+        }
+        path {
+            stroke: var(--text-primary)
+        }
+    }
 }
 
 .menu-window__copyright {
@@ -92,7 +101,7 @@
     padding: 0 10px 10px 60px;
     font-size: 14px;
     font-weight: 700;
-    color: $text-secondary;
+    color: var(--text-secondary);
 }
 
 .menu-window__bg {
