--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap');
 
 body {
-    background: $background-color;
+    background: var(--background-color);
     font-family: 'Jost', 'Inter', sans-serif;
     scroll-behavior: smooth;
 }
