--- a/frontend/src/views/Catalog/AdSlider/AdBanner/AdBanner.scss
+++ b/frontend/src/views/Catalog/AdSlider/AdBanner/AdBanner.scss
@@ -9,12 +9,12 @@
     width: 100%;
     height: 526px;
     background-size: cover;
-    color: $text-primary;
+    color: var(--text-primary);
     box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.50);
 }
 
 .ad-banner__info { 
-    background-color: $background-detailed;
+    background-color: var(--background-detailed);
     width: 480px;
     border-radius: 8px;
     margin: 20px;
@@ -30,7 +30,7 @@
 
 .ad-banner__desc {
     font-size: 20px;
-    color: $text-detailed;
+    color: var(--text-detailed);
     line-height: 28px;
     padding: 0;
     margin: 0 0 16px;
@@ -40,7 +40,7 @@
     display: flex;
     font-size: 20px;
     gap: 10px;
-    color: $accent-color;
+    color: var(--accent-color);
     & p {
         padding: 0;
         margin: 0;
@@ -56,7 +56,7 @@
 }
 
 .ad-banner__more {
-    color: $text-primary;
+    color: var(--text-primary);
     font-size: 24px;
     font-weight: 400;
     margin: 0;
@@ -71,29 +71,29 @@
     &:hover {
         & path {
             transition: all 0.15s ease;
-            fill: $primary-color;
+            fill: var(--primary-color);
         }
         & circle {
             transition: all 0.15s ease;
-            fill: $text-primary;
+            fill: var(--text-primary);
         }
     }
 
     &--solid {
         & path {
-            fill: $primary-color;
+            fill: var(--primary-color);
         }
         & circle {
-            fill: $text-primary;
+            fill: var(--text-primary);
         }
         &:hover {
             & path {
                 transition: all 0.15s ease;
-                fill: $text-primary;
+                fill: var(--text-primary);
             }
             & circle {
                 transition: all 0.15s ease;
-                fill: $primary-color;
+                fill: var(--primary-color);
             }
         }
     }
