--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -4,6 +4,7 @@
     justify-content: start;
     font-size: 0;
     margin: 0;
+    transition: all 1s;
 }
 .header__wrapper {
     max-width: 1440px;
@@ -60,7 +61,7 @@
     font-weight: 100;
     border-radius: 26px;
     background-color: var(--background-secondary);
-    transition: all 0.15s ease;
+    transition: all 1.3s ease;
     height: 50px;
     margin: 0;
     padding: 0 22px;
@@ -79,7 +80,7 @@
     padding: 0 30px;
     height: 50px;
     margin: 0;
-    transition: all 0.15s ease;
+    transition: all 1.3s ease;
     &:hover {
         opacity: 0.85;
     }
