--- a/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
+++ b/frontend/src/components/Header/ThemeSwitcher/ThemeSwitcher.scss
@@ -10,7 +10,7 @@
     font-size: 20px;
     background: var(--background-secondary);
     padding: 0 6px;
-    transition: all 0.15s linear;
+    transition: all 1.3s;
 
     &__btn {
         display: flex;
@@ -23,10 +23,9 @@
         border: none;
         border-radius: 20px;
         color: var(--text-primary);
-        transition: .2s;
         height: 38px;
         padding: 0 18px;
-        transition: all 0.15s ease;
+        transition: all 1s linear;
         &:hover {
             background-color: var(--background-color);
         }
