ДоПофикшены конфликты и добавлена тёо переключение темы

--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -62,6 +62,7 @@
     &::after {
         background-image: var(--stripesDark), var(--rainbow);
     }
+    transition: all 1.3s ease;
 }
 }
 .screen {
