--- a/frontend/src/views/Catalog/GamesList/GamesList.scss
+++ b/frontend/src/views/Catalog/GamesList/GamesList.scss
@@ -1,9 +1,10 @@
-@import '@/variables-dark.scss';
+@import '@/variables.scss';
 
 .games__list {
     margin-top: 3rem;
     display: flex;
     flex-direction: column;
+    transition: all 1.3s ease;
 }
 
 .list__head {
@@ -27,13 +28,13 @@
 
 .games__show {
     text-decoration: none;
-    color: $white-200;
+    color: var(--text-secondary);
     font-size: 1.2rem;
     font-weight: 600;
     transition: .3s;
 
     &:hover {
-        color: $white-100;
+        color: var(--text-primary);
     }
 }
 
