--- a/frontend/src/components/Header/Search/Search.scss
+++ b/frontend/src/components/Header/Search/Search.scss
@@ -15,7 +15,7 @@
     border-radius: 25px;
     background: var(--background-secondary);
     min-width: 400px;
-    transition: all .5s ease;
+    transition: all 1.3s ease;
     outline: 1px solid transparent;
     &:focus {
         outline: 1px solid var(--text-secondary);
