fix navigation dots

--- a/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
+++ b/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
@@ -42,7 +42,7 @@
   border-radius: 50px;
   border: 2px solid var(--background-extra);
   padding: 12px 20px;
-  width: 148px;
+  // width: 148px;
 }
 
 .carousel__button {
