--- a/frontend/src/views/Auth/PasswordInput/PasswordInput.scss
+++ b/frontend/src/views/Auth/PasswordInput/PasswordInput.scss
@@ -1,4 +1,4 @@
-@import '@/variables-dark.scss';
+@import '../../../variables.scss';
 .password {
     position: relative;
     margin-bottom: 30px;
