--- a/frontend/src/views/Registration/Registration.scss
+++ b/frontend/src/views/Registration/Registration.scss
@@ -1,4 +1,4 @@
-@import '@/variables-dark.scss';
+@import '../../variables.scss';
 .registration__form {
     text-align: center;
     background-color: rgba(21, 21, 21, 1);
@@ -18,14 +18,14 @@
 .registration__btn {
     display: flex;
     align-items: center;
-    border: 2px solid $primary-color;
+    border: 2px solid --primary-color;
     border-radius: 25px;
     padding: 5px 7px;
     margin-right: 20px;
 }
 
 .btn__circle {
-    background-color: $primary-color;
+    background-color: --primary-color;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -38,7 +38,7 @@
     &:hover {
         background-color: $white-100;
         & .last-update__arrow path{
-            fill: $primary-color;
+            fill: --primary-color;
         }
     }
 }
