fix: game slider in 1440px, fix tabs

--- a/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
+++ b/frontend/src/views/Home/Genre/GamesSlider/GamesSlider.scss
@@ -99,7 +99,11 @@
     align-items: center;
     height: 250px;
     overflow: hidden;
-    width: 910px;
+    width: 60vw;
+    @media (max-width: 1439px) {
+      width: 100vw;
+      
+    }
     .carousel__item {
       position: absolute;
       width: 100%;
