--- a/frontend/src/views/Home/Genre/ListGenres/ListGenres.scss
+++ b/frontend/src/views/Home/Genre/ListGenres/ListGenres.scss
@@ -2,7 +2,12 @@
 .list-genres {
     list-style: none;
     display: flex;
-    flex-direction: column;
+    @media (min-width: 1440px) {
+        flex-direction: column;
+    }
+    @media (max-width: 1440px) {
+        flex-wrap: wrap;
+    }
     gap: 10px;
     padding: 0;
 }
