add preview block

--- a/frontend/src/views/AboutUs/AboutUs.scss
+++ b/frontend/src/views/AboutUs/AboutUs.scss
@@ -2,4 +2,6 @@
     max-width: 1440px;
     margin: 0 auto;
     padding: 60px 50px;
+    height: 100vh;
+    background-image: url('../../assets/lines1.svg');
 }
