fix about-us page

--- a/frontend/src/views/AboutUs/AboutUs.scss
+++ b/frontend/src/views/AboutUs/AboutUs.scss
@@ -3,5 +3,5 @@
     margin: 0 auto;
     padding: 60px 50px;
     height: 100vh;
-    background-image: url('../../assets/lines1.svg');
+    background-image: url('@/assets/lines1.svg');
 }
