create white theme auth&register

--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 footer {
 	font-size: 20px;
-	// background-color: #0b0b0b;
+	background-color: var(--background-color);
 	max-width: 1440px;
 	margin: 0 auto;
 	width: 1440px;
