--- a/frontend/src/views/Registration/Registration.scss
+++ b/frontend/src/views/Registration/Registration.scss
@@ -1,84 +1,93 @@
 @import '../../variables.scss';
 .registration__form {
-    text-align: center;
-    background-color: rgba(21, 21, 21, 1);
-    width: 900px;
-    margin: 1% auto;
-    border-radius: 20px;
-    padding: 80px 0px 10px;
+	text-align: center;
+	background-color: var(--background-detailed);
+	width: 900px;
+	margin: 1% auto;
+	border-radius: 20px;
+	padding: 80px 0px 10px;
 }
 
 .registration__btns {
-    margin: 40px auto;
-    margin-left: 12%;
-    display: flex;
-    align-items: center;
+	margin: 40px auto;
+	margin-left: 12%;
+	display: flex;
+	align-items: center;
 }
 
 .registration__btn {
-    display: flex;
-    align-items: center;
-    border: 2px solid --primary-color;
-    border-radius: 25px;
-    padding: 5px 7px;
-    margin-right: 20px;
+	background-color: var(--primary-color);
+	color: #ffffff;
+	display: flex;
+	align-items: center;
+	border: 2px solid --primary-color;
+	border-radius: 25px;
+	padding: 5px 7px;
+	margin-right: 20px;
 }
 
 .btn__circle {
-    background-color: --primary-color;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100px;
-    height: 30px;
-    width: 30px;
-    margin-left: 10px;
-    transition: all 0.15s ease;
-    cursor: pointer;
-    &:hover {
-        background-color: $white-100;
-        & .last-update__arrow path{
-            fill: --primary-color;
-        }
-    }
+	background-color: --primary-color;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 100px;
+	height: 30px;
+	width: 30px;
+	margin-left: 10px;
+	transition: all 0.15s ease;
+	cursor: pointer;
+	&:hover {
+		background-color: $white-100;
+		& .last-update__arrow path {
+			fill: --primary-color;
+		}
+	}
 }
 
 .other__registration__btns {
-    padding: 30px 100px;
-    text-align: left;
+	padding: 30px 100px;
+	text-align: left;
 }
 
 p {
-    font-size: 22px;
+	font-size: 22px;
 }
 
 .btns {
-    padding-top: 40px;
-    text-align: center;
+	padding-top: 40px;
+	text-align: center;
 }
 
 h1 {
-    text-align: center;
-    background-image: linear-gradient(90.35deg, #AD7EFF 0%, #C29FFF 25.72%, #FF9AF1 47.25%, #E58EA7 74.18%, #FF5731 100.8%);
-    color: transparent;
-    background-clip: text;
-    width: max-content;
-    margin: 0 auto;
+	text-align: center;
+	background-image: linear-gradient(
+		90.35deg,
+		#ad7eff 0%,
+		#c29fff 25.72%,
+		#ff9af1 47.25%,
+		#e58ea7 74.18%,
+		#ff5731 100.8%
+	);
+	color: transparent;
+	background-clip: text;
+	width: max-content;
+	margin: 0 auto;
 }
 
 img:not(:first-child) {
-    margin-left: 20px;
+	margin-left: 20px;
 }
 
 .link__registr {
-    text-align: center;
-    margin: 50px 0px;
+	text-align: center;
+	margin: 50px 0px;
 }
 
 .link__registr p {
-    padding-top: 20px;
+	padding-top: 20px;
 }
 
 .link__registr h2 {
-    font-size: 32px;
+	font-size: 32px;
 }
