--- a/frontend/src/views/Auth/EmailInput/EmailInput.scss
+++ b/frontend/src/views/Auth/EmailInput/EmailInput.scss
@@ -1,36 +1,37 @@
 @import '../../../variables.scss';
 .email {
-    position: relative;
-    margin-bottom: 30px;
+	position: relative;
+	margin-bottom: 30px;
 }
 
 .email__input {
-    height: 60px;
-    padding: 0 32px;
-    margin: auto;
-    font-size: 20px;
-    color: $white-100;
-    border: none;
-    background: none;
-    border-radius: 30px;
-    background: $gray-100;
-    width: 70%;
-    transition: all 0.15s ease;
-    outline: 1px solid transparent;
-    &:focus {
-        outline: 1px solid $white-300;
-    }
-    &::placeholder {
-        color: $white-300;
-    }
+	height: 60px;
+	padding: 0 32px;
+	margin: auto;
+	font-size: 20px;
+	color: var(--text-primary);
+	border: none;
+	background: none;
+	border-radius: 30px;
+	background: var(--background-secondary);
+	width: 70%;
+	transition: all 0.15s ease;
+	outline: 1px solid transparent;
+	&:focus {
+		outline: 1px solid $white-300;
+	}
+	&::placeholder {
+		color: var(--text-secondary);
+	}
 }
 
-input, label {
-    display: block;
+input,
+label {
+	display: block;
 }
 
 .email__label {
-    text-align: left;
-    margin-left: 13%;
-    margin-bottom: 10px;
+	text-align: left;
+	margin-left: 13%;
+	margin-bottom: 10px;
 }
