--- a/frontend/src/views/Home/Hero/Hero.scss
+++ b/frontend/src/views/Home/Hero/Hero.scss
@@ -129,6 +129,8 @@
     line-height: 1;
     &--highlighted {
         color: var(--accent-color);
+    }&:nth-child(1){
+        margin-left: 20px;
     }
     &:nth-child(2){
         margin-left: 200px;
@@ -142,8 +144,9 @@
 .hero__details {
     position: absolute;
     display: flex;
-    gap: 50px;
-    right: 20px;
+    gap: 40px;
+    right: -50px;
+    top: 25px;
 }
 
 .hero__desc {
