--- a/frontend/src/views/TeamsPage/TeamsPage.scss
+++ b/frontend/src/views/TeamsPage/TeamsPage.scss
@@ -6,7 +6,6 @@
 	background-color: var(--background-detailed);
 	max-width: 1440px;
 	margin: 0 auto;
-	width: 1440px;
 	padding: 75px 75px;
 	border-radius: 40px;
 }
@@ -54,8 +53,7 @@
 	background-color: var(--background-detailed);
 	max-width: 1440px;
 	margin: 0 auto;
-	width: 1440px;
-	padding: 50px;
+	padding: 50px 75px;
 	border-radius: 40px;
 }
 
