--- a/frontend/src/views/Catalog/AdSlider/AdBand/AdBand.scss
+++ b/frontend/src/views/Catalog/AdSlider/AdBand/AdBand.scss
@@ -7,8 +7,8 @@
     color: var(--text-primary);
     text-decoration: none;
     padding: 10px;
-    max-width: 352px;
-    width: 100%;
+    max-width: 430px;
+    width: max-content;
     border-radius: 16px;
     transition: all 1.3s ease;
 }
